--- a/goodbye.html
+++ b/goodbye.html
@@ -5,7 +5,7 @@
     <title>Goodbye!</title>
   </head>
 
-  <body>
+  <body bgcolor="#10100E" text="cccccc">
     <h1>Goodbye World</h1>
     <h2>Adios</h2>
     <h3>Sayounara</h3>
