--- a/goodbye.html
+++ b/goodbye.html
@@ -6,7 +6,7 @@
   </head>
 
   <body bgcolor="#10100E" text="cccccc">
-    <h1>Goodbye World</h1>
+    <u>Goodbye World</u>
     <h2>Adios</h2>
     <h3>Sayounara</h3>
     <p> What a short website </p>
